--- a/caelum/sobre.html
+++ b/caelum/sobre.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Dot | Sobre a empresa</title>
     <link rel="icon" href="img/favicon.ico"> <!-- Por icone-->
-    <link rel="stylesheet" href="/css/sobre.css">
+    <link rel="stylesheet" href="css/sobre.css">
 </head>
 
 <body>
@@ -86,7 +86,7 @@ renciais"> nossos diferenciais </a>.
     <h1 class="titulo">Contato</h1>
 
     <h3>Correspondência</h3>
-    <small>(todos os dias, das 9h às 18h</small>
+    <small>(todos os dias, das 9h às 18h)</small>
 
     <address>
         AOVS Sistemas de Informática S.A
@@ -99,11 +99,11 @@ renciais"> nossos diferenciais </a>.
     </address>
 
     <h3>Telefones</h3>
-    <small>(segunda à sexta, das 9h às 18h</small>
+    <small>(segunda à sexta, das 9h às 18h)</small>
     <dl>
         <dt>Pessoa Física</dt>
         <dd> <a	href="tel://114118-3319">	(11)	4118-3319	</a> </dd>
-        <dt>Pessoa Física</dt>
+        <dt>Pessoa Jurídica</dt>
         <dd> <a	href="tel://114118-2172">	(11)	4118-2172	</a> </dd>
     </dl>
 
