--- a/caelum/sobre.html
+++ b/caelum/sobre.html
@@ -8,6 +8,7 @@
     <title>Music Dot | Sobre a empresa</title>
     <link rel="icon" href="img/favicon.ico"> <!-- Por icone-->
     <link rel="stylesheet" href="css/sobre.css">
+    <meta name = "viewport" content = "width=device-width">
 </head>
 
 <body>
@@ -84,29 +85,36 @@ renciais"> nossos diferenciais </a>.
         <li> Mais de um milhão de funcionários em todo o mundo </li>
     </ul>
     <h1 class="titulo">Contato</h1>
+    <div class="contato__secao">
+        <h3 class="contato__subtitulo">Correspondência</h3>
+        <small>(todos os dias, das 9h às 18h)</small>
 
-    <h3>Correspondência</h3>
-    <small>(todos os dias, das 9h às 18h)</small>
+        <address class="contato__info">
+            AOVS Sistemas de Informática S.A
+            <br>
+            Rua Vergueiro, 3185, 8º andar
+            <br>
+            Vila Mariana
+            <br>
+            São Paulo - SP
+        </address>
+    </div>
 
-    <address>
-        AOVS Sistemas de Informática S.A
-        <br>
-        Rua Vergueiro, 3185, 8º andar
-        <br>
-        Vila Mariana
-        <br>
-        São Paulo - SP
-    </address>
+    <div class = "contato__secao contato__secao--telefone">
+        <h3 class="contato__subtitulo">Telefones</h3>
+        <small>(segunda à sexta, das 9h às 18h)</small>
+        <dl class="contato__info">
+            <dt class="contato__info-titulo">Pessoa Física</dt>
+            <dd class="contato__info-descricao"> <a href="tel://114118-3319"> (11) 4118-3319 </a> </dd>
+            <dt class="contato__info-titulo">Pessoa Jurídica</dt>
+            <dd class="contato__info-descricao"> <a href="tel://114118-2172"> (11) 4118-2172 </a> </dd>
+        </dl>
+    </div>
+    <footer class="rodape">
+        <img src="img/logo.svg" alt="Logo da Music Dot" class = "rodape__logo">
+        <p class = "rodape__copyright">&copy; Copyright MusicDot</p>
 
-    <h3>Telefones</h3>
-    <small>(segunda à sexta, das 9h às 18h)</small>
-    <dl>
-        <dt>Pessoa Física</dt>
-        <dd> <a	href="tel://114118-3319">	(11)	4118-3319	</a> </dd>
-        <dt>Pessoa Jurídica</dt>
-        <dd> <a	href="tel://114118-2172">	(11)	4118-2172	</a> </dd>
-    </dl>
-
+    </footer>
 </body>
 
 </html>
