--- a/caelum/index.html
+++ b/caelum/index.html
@@ -25,14 +25,72 @@
         <ul class="cabecalho__menu">
             <li class="cabecalho__item-menu"><a href="sobre.html#contato">Contato</a></li>
             <li class="cabecalho__item-menu"><a href="">Entrar</a></li>
-            <li class="cabecalho__item-menu"><a href="">Matricule-se</a></li>
+            <li class="cabecalho__item-menu cabecalho__item-menu--matricular"><a href="">Matricule-se</a></li>
         </ul>
 
     </header>
-    
+
     <main>Main</main>
 
-    <footer>Rodapé</footer>
+    <footer>
+        <section>
+            <img src="img/logo.svg" alt="Logo da Music Dot">
+
+            <p>
+                AOVS Sistemas de Informática S.A
+                <br>
+                Rua Vergueiro, 3185, 8º andar
+                <br>
+                Vila Mariana
+                <br>
+                São Paulo - SP
+            </p>
+
+
+            <ul>
+                <li><a href="https://www.facebook.com/musicdotonline" target="_blank"><img
+                            src="img/footer-icone-facebook.svg" alt=""></a></li>
+                <li><a href="https://www.youtube.com/user/musicdotonline" target="_blank"><img
+                            src="img/footer-icone-youtube.svg" alt=""></a></li>
+                <li><a href="https://www.instagram.com/musicdotonline/" target="_blank"><img
+                            src="img/footer-icone-instagram.svg" alt=""></a></li>
+            </ul>
+
+        </section>
+        <section>
+            <h2>Cursos da Music Dot</h2>
+            <nav>
+                <ul>
+                    <li><a href="#">Cursos de Teclado & Piano</a></li>
+                    <li><a href="#">Cursos de Violão/Guitarra</a></li>
+                    <li><a href="#">Cursos de Baixo</a></li>
+                    <li><a href="#">Cursos de Bateria</a></li>
+                    <li><a href="#">Cursos de Percussão</a></li>
+                    <li><a href="#">Cursos de Canto</a></li>
+                    <li><a href="#">Cursos de Áudio</a></li>
+                    <li><a href="#">Cursos de Teoria</a></li>
+                    <li><a href="#">Cursos de Sopro</a></li>
+                    <li><a href="#">Cursos de Cordas</a></li>
+                </ul>
+
+            </nav>
+            <section>
+                <h2> MusicDot </h2>
+                <nav>
+                    <ul>
+                        <li><a href="#">Apostila</a></li>
+                        <li><a href="#">E-book</a></li>
+                        <li><a href="#">Login</a></li>
+                        <li><a href="#">Matricule-se</a></li>
+                        <li><a href="#">Perguntas frequentes</a></li>
+                        <li><a href="#">Para Escolas</a></li>
+                        <li><a href="#">Contato</a></li>
+                    </ul>
+                </nav>
+            </section>
+        </section>
+
+    </footer>
 </body>
 
 </html>
