--- a/caelum/index.html
+++ b/caelum/index.html
@@ -10,6 +10,8 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/cabecalho.css">
+    <link rel="stylesheet" href="css/rodape.css">
+    <link rel="stylesheet" href="css/form-newsletter.css">
 
 
     <title>Document</title>
@@ -19,7 +21,7 @@
 
     <header class="cabecalho">
         <a href="index.html">
-            <img src="img/musicdot-logo-light.svg" alt="Logo Music Dot" class="cabecalho__logo"
+            <img src="img/musicdot-logo-light.svg" alt="Logo MusicDot" class="cabecalho__logo"
                 title="Ir para a página Inicial da Music Dot">
         </a>
         <ul class="cabecalho__menu">
@@ -32,11 +34,11 @@
 
     <main>Main</main>
 
-    <footer>
-        <section>
-            <img src="img/logo.svg" alt="Logo da Music Dot">
+    <footer class="rodape">
+        <section class="rodape__secao">
+            <img class="rodape__logo" src="img/logo.svg" alt="Logo da Music Dot">
 
-            <p>
+            <p class="rodape__infos-empresa">
                 AOVS Sistemas de Informática S.A
                 <br>
                 Rua Vergueiro, 3185, 8º andar
@@ -47,49 +49,64 @@
             </p>
 
 
-            <ul>
-                <li><a href="https://www.facebook.com/musicdotonline" target="_blank"><img
-                            src="img/footer-icone-facebook.svg" alt=""></a></li>
-                <li><a href="https://www.youtube.com/user/musicdotonline" target="_blank"><img
-                            src="img/footer-icone-youtube.svg" alt=""></a></li>
-                <li><a href="https://www.instagram.com/musicdotonline/" target="_blank"><img
-                            src="img/footer-icone-instagram.svg" alt=""></a></li>
+            <ul class="rodape__lista-midias-sociais">
+                <li class="rodape__item-midias-sociais"><a href="https://www.facebook.com/musicdotonline"
+                        target="_blank"><img src="img/footer-icone-facebook.svg" alt=""></a></li>
+                <li class="rodape__item-midias-sociais"><a href="https://www.youtube.com/user/musicdotonline"
+                        target="_blank"><img src="img/footer-icone-youtube.svg" alt=""></a></li>
+                <li class="rodape__item-midias-sociais"><a href="https://www.instagram.com/musicdotonline/"
+                        target="_blank"><img src="img/footer-icone-instagram.svg" alt=""></a></li>
             </ul>
 
         </section>
-        <section>
-            <h2>Cursos da Music Dot</h2>
+        <section class="rodape__secao">
+            <h2 class="rodape__titulo">Cursos da MusicDot</h2>
             <nav>
                 <ul>
-                    <li><a href="#">Cursos de Teclado & Piano</a></li>
-                    <li><a href="#">Cursos de Violão/Guitarra</a></li>
-                    <li><a href="#">Cursos de Baixo</a></li>
-                    <li><a href="#">Cursos de Bateria</a></li>
-                    <li><a href="#">Cursos de Percussão</a></li>
-                    <li><a href="#">Cursos de Canto</a></li>
-                    <li><a href="#">Cursos de Áudio</a></li>
-                    <li><a href="#">Cursos de Teoria</a></li>
-                    <li><a href="#">Cursos de Sopro</a></li>
-                    <li><a href="#">Cursos de Cordas</a></li>
+                    <li class="rodape__item-lista"><a href="#">Cursos de Teclado & Piano</a></li>
+                    <li class="rodape__item-lista"><a href="#">Cursos de Violão/Guitarra</a></li>
+                    <li class="rodape__item-lista"><a href="#">Cursos de Baixo</a></li>
+                    <li class="rodape__item-lista"><a href="#">Cursos de Bateria</a></li>
+                    <li class="rodape__item-lista"><a href="#">Cursos de Percussão</a></li>
+                    <li class="rodape__item-lista"><a href="#">Cursos de Canto</a></li>
+                    <li class="rodape__item-lista"><a href="#">Cursos de Áudio</a></li>
+                    <li class="rodape__item-lista"><a href="#">Cursos de Teoria</a></li>
+                    <li class="rodape__item-lista"><a href="#">Cursos de Sopro</a></li>
+                    <li class="rodape__item-lista"><a href="#">Cursos de Cordas</a></li>
                 </ul>
 
             </nav>
-            <section>
-                <h2> MusicDot </h2>
-                <nav>
-                    <ul>
-                        <li><a href="#">Apostila</a></li>
-                        <li><a href="#">E-book</a></li>
-                        <li><a href="#">Login</a></li>
-                        <li><a href="#">Matricule-se</a></li>
-                        <li><a href="#">Perguntas frequentes</a></li>
-                        <li><a href="#">Para Escolas</a></li>
-                        <li><a href="#">Contato</a></li>
-                    </ul>
-                </nav>
-            </section>
+        </section>
+        <section class="rodape__secao">
+            <h2 class="rodape__titulo"> MusicDot </h2>
+            <nav>
+                <ul>
+                    <li class="rodape__item-lista"><a href="#">Apostila</a></li>
+                    <li class="rodape__item-lista"><a href="#">E-book</a></li>
+                    <li class="rodape__item-lista"><a href="#">Login</a></li>
+                    <li class="rodape__item-lista"><a href="#">Matricule-se</a></li>
+                    <li class="rodape__item-lista"><a href="#">Perguntas frequentes</a></li>
+                    <li class="rodape__item-lista"><a href="#">Para Escolas</a></li>
+                    <li class="rodape__item-lista"><a href="#">Contato</a></li>
+                </ul>
+            </nav>
         </section>
 
+        <section class="rodape__secao">
+            <h2 class="rodape__titulo">
+                Receba novidades e lançamentos
+            </h2>
+
+            <form action="#" method="get" class="form-newsletter">
+                <label for="form-newsletter__label" class="form-newsletter__label">
+                    Seu email pessoal
+                </label>
+                <input id="email-newsletter" name="email-newsletter" type="email" class="form-newsletter__campo">
+                <button type="submit" class="form-newsletter__botao">
+                    OK
+                </button>
+            </form>
+        </section>
     </footer>
 </body>
 
