--- a/caelum/index.html
+++ b/caelum/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/cabecalho.css">
     <link rel="stylesheet" href="css/rodape.css">
+    <link rel="stylesheet" href="css/container.css">
     <link rel="stylesheet" href="css/form-newsletter.css">
 
 
@@ -19,7 +20,7 @@
 
 <body>
 
-    <header class="cabecalho">
+    <header class="cabecalho container">
         <a href="index.html">
             <img src="img/musicdot-logo-light.svg" alt="Logo MusicDot" class="cabecalho__logo"
                 title="Ir para a página Inicial da Music Dot">
@@ -32,10 +33,51 @@
 
     </header>
 
-    <main>Main</main>
+    <main>
+        <section class="cursos">
+            <article class="cursos__chamada --largura-grande">
+                <h1>Cursos online de <strong class="chamada__titulo--destaque">música</strong></h1>
+            </article>
+            <nav>
+                <ul class="cursos__lista">
+                    <li class="curso--tecladopiano">
+                        <a href="#">Teclado & Piano</a>
+                    </li>
+                    <li class="curso--violaoguitarra">
+                        <a href="#">Violão & Guitarra</a>
+                    </li>
+                    <li class="curso--baixo">
+                        <a href="#">Baixo</a>
+                    </li>
+                    <li class="curso--bateria	curso--destaque">
+                        <a href="#">Bateria</a>
+                    </li>
+                    <li class="curso--percussao">
+                        <a href="#">Percussão</a>
+                    </li>
+                    <li class="curso--canto	curso--destaque2">
+                        <a href="#">Canto</a>
+                    </li>
 
-    <footer class="rodape">
-        <section class="rodape__secao">
+                    <li class="curso--audio">
+                        <a href="#">Áudio</a>
+                    </li>
+                    <li class="curso--teoria">
+                        <a href="#">Teoria</a>
+                    </li>
+                    <li class="curso--sopro">
+                        <a href="#">Sopro</a>
+                    </li>
+                    <li class="curso--cordas">
+                        <a href="#">Cordas</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
+    </main>
+
+    <footer class="rodape container">
+        <section class="rodape__secao rodape__secao--sobre">
             <img class="rodape__logo" src="img/logo.svg" alt="Logo da Music Dot">
 
             <p class="rodape__infos-empresa">
@@ -59,7 +101,7 @@
             </ul>
 
         </section>
-        <section class="rodape__secao">
+        <section class="rodape__secao rodape__secao--cursos">
             <h2 class="rodape__titulo">Cursos da MusicDot</h2>
             <nav>
                 <ul>
@@ -77,7 +119,7 @@
 
             </nav>
         </section>
-        <section class="rodape__secao">
+        <section class="rodape__secao rodape__secao--links">
             <h2 class="rodape__titulo"> MusicDot </h2>
             <nav>
                 <ul>
@@ -92,7 +134,7 @@
             </nav>
         </section>
 
-        <section class="rodape__secao">
+        <section class="rodape__secao rodape__secao--newsletter">
             <h2 class="rodape__titulo">
                 Receba novidades e lançamentos
             </h2>
