--- a/caelum/index.html
+++ b/caelum/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/rodape.css">
     <link rel="stylesheet" href="css/container.css">
     <link rel="stylesheet" href="css/form-newsletter.css">
+    <link rel="stylesheet" href="css/cursos.css">
 
 
     <title>Document</title>
@@ -37,6 +38,8 @@
         <section class="cursos">
             <article class="cursos__chamada --largura-grande">
                 <h1>Cursos online de <strong class="chamada__titulo--destaque">música</strong></h1>
+                <p>Comece agora e aprenda sua primeira música em 10 minutos!</p>
+                <a href="cursos.html" class ="chamada__cursos__matricula botao">Matricule-se</a>
             </article>
             <nav>
                 <ul class="cursos__lista">
